debezium/dbz#2020 Split generated-column flagging from projection pruning
Signed-off-by: Ganeshan Nagarajan <ganeshancse06@gmail.com>